--- a/systemd/momentum-metrics-http.service
+++ b/systemd/momentum-metrics-http.service
@@ -1,6 +1,6 @@
 
 [Unit]
-Description=Momentum Private WS (account streams)
+Description=Momentum metrics HTTP (aiohttp)
 After=network.target
 
 [Service]
@@ -9,7 +9,9 @@ User=snapdiscounts
 Group=psacln
 WorkingDirectory=/var/www/vhosts/snapdiscounts.nl/momentum
 Environment=APP=/var/www/vhosts/snapdiscounts.nl/momentum
-ExecStart=/var/www/vhosts/snapdiscounts.nl/momentum/.venv/bin/python -m momentum.scripts.ws_private_runner --app /var/www/vhosts/snapdiscounts.nl/momentum
+Environment=OBS_HTTP_HOST=127.0.0.1
+Environment=OBS_HTTP_PORT=9201
+ExecStart=/var/www/vhosts/snapdiscounts.nl/momentum/.venv/bin/python -m momentum.scripts.metrics_http
 Restart=always
 RestartSec=2
 
