--- a/systemd/momentum-ws-public.service
+++ b/systemd/momentum-ws-public.service
@@ -1,6 +1,6 @@
 
 [Unit]
-Description=Momentum Private WS (account streams)
+Description=Momentum Public WS (v2 subscribe)
 After=network.target
 
 [Service]
@@ -9,7 +9,7 @@ User=snapdiscounts
 Group=psacln
 WorkingDirectory=/var/www/vhosts/snapdiscounts.nl/momentum
 Environment=APP=/var/www/vhosts/snapdiscounts.nl/momentum
-ExecStart=/var/www/vhosts/snapdiscounts.nl/momentum/.venv/bin/python -m momentum.scripts.ws_private_runner --app /var/www/vhosts/snapdiscounts.nl/momentum
+ExecStart=/var/www/vhosts/snapdiscounts.nl/momentum/.venv/bin/python -m momentum.scripts.ws_public_subscribe --app /var/www/vhosts/snapdiscounts.nl/momentum
 Restart=always
 RestartSec=2
 
