chore: server sync 2025-09-27 – werkende protectd (TP/SL/BE fixes, rate-limit safe)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,18 @@ var/
 __pycache__/
 *.pyc
 .env*
+# venv & artifacts
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.log
+
+# lokale config/secrets
+.env*
+!.env.example
+
+# editors
+.vscode/
+.idea/
